[gd_scene load_steps=4 format=2]

[ext_resource path="res://prefabs/save_load/SaveLoad.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/SaveLoadTesting.gd" type="Script" id=2]

[sub_resource type="Theme" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 1 )
script = ExtResource( 2 )

[node name="Save_Load" parent="." instance=ExtResource( 1 )]
path = "Settings"
file_name = "Display Settings"
section_name = "Window"
properties = PoolStringArray( "fullscreen_int" )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1604.0
margin_bottom = 450.0

[node name="fullscreen" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 1600.0
margin_bottom = 450.0
rect_min_size = Vector2( 1600, 450 )
text = "Toggle Fullscreen"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 454.0
margin_right = 1604.0
margin_bottom = 904.0

[node name="save" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_right = 800.0
margin_bottom = 450.0
rect_min_size = Vector2( 800, 450 )
text = "Save"

[node name="load" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 804.0
margin_right = 1604.0
margin_bottom = 450.0
rect_min_size = Vector2( 800, 450 )
text = "Load"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/HBoxContainer/fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/load" to="." method="_on_load_pressed"]
